# semantic-bridge

./: .gitignore  README.md  main.py  mapping_candidates.xlsx  matching_test.ipynb  pyproject.toml
data_models/: ilap_graphql_schema.graphql  sdo.ttl
etl/: concepts.py  extractor.py
matching/: matcher.py  semantic_matcher.py
