[project]
name = "ilap-sdo-mapping-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphql-core>=3.2.8",
    "jupyter>=1.1.1",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.5",
    "rdflib>=7.6.0",
    "sentence-transformers>=5.5.1",
]
